fix($main): fix glide image display issue
fix($main): fix immersive mode issue

refactor($main): replace PhotoView with GestureView due to state persisting issues

feat($main): finish feature set as wallpaper

--- a/app/src/main/res/values-zh-rCN/strings.xml
+++ b/app/src/main/res/values-zh-rCN/strings.xml
@@ -1,4 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">必应壁纸</string>
+    <string name="apply">应用</string>
+    <string name="alert_msg">设为桌面壁纸?</string>
 </resources>
