--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Bing Wallpaper</string>
+    <string name="apply">apply</string>
+    <string name="alert_msg">Set as wallpaper?</string>
 </resources>
